Return payment register as blob